--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <body>
     
-    <div class="container">
-        <fieldset>
-            <legend>Login</legend>
+    <div class="card">
+        <form>
+            <div><p>Login</p></div>
             <input type="text" name="username" placeholder="Username" required><span class="tick"></span>
             <br>
             <input type="password" name="password" placeholder="Password" required>
@@ -29,7 +29,7 @@
             <br>
             <input type="submit" value="Login"><br>
             <p>Not registered? <span>Create an account</span></p>
-        </fieldset>
+        </form>
     </div>
     
 </body>
